--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,8 @@
         {
             "label": "OTA",
             "type": "shell",
-            "command": "make upload"
+            "command": "make upload",
+            "problemMatcher": []
         }
     ]
 }
