--- a/quadpod-ui/package.json
+++ b/quadpod-ui/package.json
@@ -202,6 +202,7 @@
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "history": "^4.7.2",
+    "node-hid": "^0.7.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-gamepad": "^1.0.3",
